--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-chatbot-kit": "^1.0.7",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.1",
     "react-redux": "^7.2.1",
